--- a/src/Laravel-John/public/css/app.css
+++ b/src/Laravel-John/public/css/app.css
@@ -1,3 +1,9 @@
+/* CSS フレームワーク Bootstrap import */
+@import url('https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css');
+
+/* CSS フレームワーク Bootflat import */
+@import url('https://cdnjs.cloudflare.com/ajax/libs/bootflat/2.0.4/css/bootflat.min.css');
+
 header {
     background-color: #f8f9fa;
     padding: 10px;
@@ -14,5 +20,23 @@ header a {
 
 header a:hover {
     text-decoration: underline;
+}
+
+.btn-cute {
+    background-color: #ff99cc;
+    color: white;
+    border-radius: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.btn-cute:hover {
+    background-color: #ff66a3;
 }
 
